<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<kr.co.prnd.YouTubePlayerView
            android:id="@+id/you_tube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </kr.co.prnd.YouTubePlayerView>-->

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:videoId=""
            app:autoPlay="true"
            app:showFullScreenButton="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/youtube_imageView_heart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                app:srcCompat="@drawable/heart_white" />

            <com.gauravk.bubblenavigation.BubbleNavigationLinearView
                android:id="@+id/top_navigation_linearView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:elevation="8dp"
                android:padding="8dp"
                app:bnc_mode="spread">

                <com.gauravk.bubblenavigation.BubbleToggleView
                    android:id="@+id/youtube_tab_lyrics"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:elevation="4dp"
                    app:bt_active="true"
                    app:bt_badgeBackgroundColor="#4DB6AC"
                    app:bt_colorActive="#00897B"
                    app:bt_colorInactive="#4DB6AC"
                    app:bt_icon="@drawable/lyrics_transparent"
                    app:bt_iconHeight="32dp"
                    app:bt_iconWidth="32dp"
                    app:bt_padding="0dp"
                    app:bt_title="@string/youtube_tab_lyrics"
                    app:bt_titlePadding="4dp"
                    app:bt_titleSize="16dp" />

                <com.gauravk.bubblenavigation.BubbleToggleView
                    android:id="@+id/youtube_tab_study"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:elevation="4dp"
                    app:bt_active="true"
                    app:bt_badgeBackgroundColor="#9575CD"
                    app:bt_colorActive="#5E35B1"
                    app:bt_colorInactive="#9575CD"
                    app:bt_icon="@drawable/word_transparent"
                    app:bt_iconHeight="32dp"
                    app:bt_iconWidth="32dp"
                    app:bt_padding="0dp"
                    app:bt_title="@string/youtube_tab_words"
                    app:bt_titlePadding="4dp"
                    app:bt_titleSize="16dp" />

                <com.gauravk.bubblenavigation.BubbleToggleView
                    android:id="@+id/youtube_tab_quiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="4dp"
                    app:bt_active="true"
                    app:bt_badgeBackgroundColor="#E57373"
                    app:bt_colorActive="#E53935"
                    app:bt_colorInactive="#E57373"
                    app:bt_icon="@drawable/question_transparent"
                    app:bt_iconHeight="32dp"
                    app:bt_iconWidth="32dp"
                    app:bt_padding="0dp"
                    app:bt_title="@string/youtube_tab_quiz"
                    app:bt_titlePadding="4dp"
                    app:bt_titleSize="16dp" />

                <!-- Add more child items here - max upto 5 -->

            </com.gauravk.bubblenavigation.BubbleNavigationLinearView>
        </LinearLayout>

        <!--<com.google.android.material.tabs.TabLayout
            android:id="@+id/youtube_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="#009688"
            app:tabIndicatorColor="#FFC400"
            tools:visibility="visible">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/youtube_tab_lyrics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="가사 보기" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/youtube_tab_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="단어 보기" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/youtube_tab_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="퀴즈 보기" />
        </com.google.android.material.tabs.TabLayout>-->

        <FrameLayout
            android:id="@+id/youtube_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>




</RelativeLayout>