<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/aboutFragment_scrollView_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/aboutFragment_box_guestUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/aboutFragment_textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/songs_about_guestUser_guide"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/aboutFragment_btn_login"
                    style="@style/FirebaseUI.Button.AccountChooser"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:text="@string/songs_about_guestUser_btnLogin"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aboutFragment_box_loginUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aboutFragmenttextView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="계정"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/aboutFragment_textView_userId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="2"
                        android:text="id@mail.com"
                        android:textAlignment="textStart" />

                    <TextView
                        android:id="@+id/aboutFragment_btn_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_weight="2"
                        android:text="로그아웃"
                        android:textAlignment="textEnd" />

                </LinearLayout>

                <View
                    android:id="@+id/aboutFragment_divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/aboutFragment_textView_badge_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="뱃지"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/aboutFragment_recyclerView_badge"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="16dp">

                </androidx.recyclerview.widget.RecyclerView>

                <View
                    android:id="@+id/aboutFragment_divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/aboutFragment_textView_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="카테고리"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/aboutFragment_recyclerView_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <View
                    android:id="@+id/aboutFragment_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aboutFragment_box_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aboutFragment_textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/browser_actions_context_menu_min_padding"
                    android:text="문의 및 노래 요청"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/aboutFragment_textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:text="@string/songs_about_notice_description" />

                    <ImageView
                        android:id="@+id/aboutFragment_imageView14"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/cat_hand" />
                </LinearLayout>

                <Button
                    android:id="@+id/aboutFragment_btn_send_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/radius"
                    android:backgroundTint="#0288D1"
                    android:text="@string/songs_about_send_email"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aboutFragment_box_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:id="@+id/aboutFragment_banner_blog_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/aboutFragment_imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/thumb_kataomoi" />

                    <ImageView
                        android:id="@+id/aboutFragment_imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:alpha=".4"
                        android:background="#66000000"
                        app:srcCompat="@color/common_google_signin_btn_text_dark_focused" />

                    <TextView
                        android:id="@+id/aboutFragment_textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="ㅇㅇㅇ 블로그"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/aboutFragment_banner_mail_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/aboutFragment_imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/thumb_kumotoyurei" />

                    <ImageView
                        android:id="@+id/aboutFragment_imageView6"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:alpha="0.4"
                        app:srcCompat="@color/common_google_signin_btn_text_dark_focused" />

                    <ImageView
                        android:id="@+id/aboutFragment_imageView10"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_mail_outline_black_24dp" />

                    <TextView
                        android:id="@+id/aboutFragment_textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="원하는 노래가 있나요?"
                        android:textAlignment="center"
                        android:textColor="#FDFFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/aboutFragment_textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="copyright all reserved. 궁금한 점이나 요청 사항이 있다면 메일 보내주세요. xxx@naver.com"
                    android:textSize="10sp" />

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView >

</FrameLayout>